--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/guestbookdb
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${GUESTBOOKDB_CONNECTION_STRING}
+sspring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/guestbookdb
+sspring.datasource.username=${DB_USERNAME}
+sspring.datasource.password=${DB_PASSWORD}
