--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.url=jdbc:mysql://localhost/guestbookdb
 spring.datasource.username=root
 spring.datasource.password=
+spring.profiles.active=prod
