--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=${GUESTBOOKDB_CONNECTION_STRING}
 sspring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/guestbookdb
-sspring.datasource.username=${DB_USERNAME}
+spring.datasource.username=guestbookdb
 sspring.datasource.password=${DB_PASSWORD}
 
