--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${GUESTBOOKDB_CONNECTION_STRING}
+spring.datasource.url=jdbc:${GUESTBOOKDB_CONNECTION_STRING}
 sspring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/guestbookdb
 spring.datasource.username=guestbookdb
 sspring.datasource.password=${DB_PASSWORD}
